@@ -3,7 +3,8 @@
 
 package io.clientcore.core.http.models;
 
-import io.clientcore.core.util.binarydata.BinaryData;
+import io.clientcore.core.implementation.http.HttpResponse;
+import io.clientcore.core.models.binarydata.BinaryData;
 import org.junit.jupiter.api.Assertions;
 import org.junit.jupiter.api.Test;
 import org.junit.jupiter.params.ParameterizedTest;
@@ -12,6 +13,7 @@ import org.junit.jupiter.params.provider.ValueSource;
 import org.opentest4j.AssertionFailedError;
 
 import java.util.ArrayList;
+import java.util.Arrays;
 import java.util.Collections;
 import java.util.Iterator;
 import java.util.List;
@@ -25,7 +27,7 @@ import static org.junit.jupiter.api.Assertions.assertEquals;
 public class PagedIterableTests {
 
     private final HttpHeaders httpHeaders = new HttpHeaders();
-    private final HttpRequest httpRequest = new HttpRequest(HttpMethod.GET, "http://localhost");
+    private final HttpRequest httpRequest = new HttpRequest().setMethod(HttpMethod.GET).setUri("http://localhost");
     private final BinaryData responseBody = BinaryData.empty();
 
     // tests with mocked PagedResponse
@@ -77,12 +79,12 @@ public class PagedIterableTests {
     public void iterateResponseContainsEmptyArray() {
         pagedResponses = new ArrayList<>(3);
         // second page is empty but has nextLink
-        pagedResponses.add(new PagedResponse<>(httpRequest, 200, httpHeaders, responseBody, List.of(0, 1, 2), null, "1",
-            null, null, null));
+        pagedResponses.add(new PagedResponse<>(httpRequest, 200, httpHeaders, responseBody, Arrays.asList(0, 1, 2),
+            null, "1", null, null, null));
         pagedResponses.add(new PagedResponse<>(httpRequest, 200, httpHeaders, responseBody, Collections.emptyList(),
             null, "2", null, null, null));
-        pagedResponses.add(new PagedResponse<>(httpRequest, 200, httpHeaders, responseBody, List.of(3, 4), null, null,
-            null, null, null));
+        pagedResponses.add(new PagedResponse<>(httpRequest, 200, httpHeaders, responseBody, Arrays.asList(3, 4), null,
+            null, null, null, null));
 
         PagedIterable<Integer> pagedIterable
             = new PagedIterable<>(pagingOptions -> pagedResponses.isEmpty() ? null : pagedResponses.get(0),
